Using DOM Change random color of box

--- a/dom practice/index.html
+++ b/dom practice/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="script.js"></script>
+
     <style>
+      .container {
+        display: flex;
+        justify-content: center;
+      }
       .box {
         height: 35px;
         width: 35px;
@@ -23,5 +27,6 @@
       <div class="box">Binod</div>
       <div class="box">Binod</div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
