Dynamic Website card builder

--- a/dom practice/index.html
+++ b/dom practice/index.html
@@ -9,13 +9,17 @@
       .container {
         display: flex;
         justify-content: center;
+        align-items: center;
       }
       .box {
+        text-align: center;
         height: 35px;
         width: 35px;
         margin: 15px;
-        padding: 15px;
+        padding: 25px;
         border: 2px solid black;
+        font-family: Georgia, "Times New Roman", Times, serif;
+        font-weight: bolder;
       }
     </style>
   </head>
