JS DOM Manipulation

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Javascript DOM</title>
-  </head>
-  <body>
-    <h1>This is Javascript DOM Tutorials</h1>
-    <script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Javascript DOM</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html,
+    body {
+      height: 100%;
+      width: 100%;
+    }
+
+    #bulb {
+      height: 100px;
+      width: 100px;
+      border: 3px dotted black;
+      border-radius: 50px;
+      margin: 10px auto;
+    }
+
+    #btn {
+      padding: 10px 20px;
+      font-size: 12px;
+      margin: 50px auto;
+      background-color: rgb(194, 161, 209);
+      border: 2px solid black;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 60px;
+      font-weight: 900;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+  </style>
+</head>
+
+<body>
+  <!-- <h1>This is Javascript DOM Tutorials</h1>
+
+  <div id="bulb">
+  </div>
+  <button id="btn">ON</button> -->
+
+  <h1>Hello ji 1</h1>
+  <h1>Hello ji Hello 2</h1>
+  <h1>Hello ji Hello ji Hello 3</h1>
+
+  <div class="box"></div>
+  <div class="box2"></div>
+  <script src="script.js"></script>
+  <!-- <script>
       document.title = "Hey Faiajn";
       console.log(document.title, document.body);
       document.body.style.backgroundColor = "red";
-    </script>
-  </body>
+    </script> -->
+</body>
+
 </html>
